Mon Sep  9 10:13:17 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* Makefile.am doc/Makefile.am doc/txt2man:
	- make and make distcheck work

Sun Sep  8 21:34:35 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* src/tds/util.c	patch from lbayuk on 7 September to fix some 
				formatting problems in the log
Sun Sep  8 19:41:41 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* R0_60 release tag applied; release candidate #1 for 0.60!
	* doc/userguide.sgml	conforms to release 0.60, added locale
	* doc/Makefile		removed
	* doc/Makefile.am	added, puts doc directory into the main make
	* Makefile.am		added doc directory and userguide.tgz
	* configure.in		added doc directory
	
Sun Sep  8 08:54:07 EDT 2002	Brian Bruns <camber@ais.org>
	* src/tds/read.c(tds_get_byte): change precedence on empty packet sink.
	* src/tds/config.c(tds_read_conf_file): consolidated redundant code into 
       tds_try_conf_file().  Added check for conf file added programmatically
       to match documented behaviour.
     * src/apps/tsql.c:  Add -I option to set freetds.conf/interfaces file

Sat Sep  7 23:36:06 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/userguide.sgml:
	- Fix a few more spelling errors.

Sat Sep  7 10:57:27 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* configure.in	Set prefix to /usr/local, sysconfdir becomes /usr/local/etc
	
Fri Sep  6 17:23:00 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/token.c:
	- Ensure proc_name parameter to message handlers is never NULL.
	  This matches Sybase's behavior, and prevents crashes in correct
	  handlers that don't expect NULLs here (such as the example handlers
	  in Sybase's documentation).
	* src/dblib/dblib.c:
	- Fix declarations of global handlers.
	- Pass the line number through to the message handler.

Fri Sep  6 15:54:19 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/dblib.c:
	- remove bogus dberrhandler() and dbmsghandler()

Fri Sep  6 13:16:46 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>