@@ -1,3 +1,6 @@
+Mon Sep  9 16:17:23 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
+	* doc/Makefile.am: distribute only compiled man
+
 Mon Sep  9 10:13:17 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
 	* Makefile.am doc/Makefile.am doc/txt2man:
 	- make and make distcheck work
